feat: Mesh V2 架构 - Phase 1 基础实现
新架构特点:
- Mesh = 单一材料域 (每个 Mesh 绑定一个 Material)
- Model 管理多个 Mesh (支持多材料/多区域)
- Element 层次: Node → Edge → Face → Volume
- 命名空间: fem::v2 (与旧架构隔离)

实现内容:
- Element 类层次 (Node, Edge2, Tri3, Quad4, Tet4, Brick8)
- Material 材料类 (属性管理)
- Mesh 单材料域 (节点、单元、边界、区域管理)
- Model 顶层容器 (材料库、多Mesh、Interface)

测试:
- 16 个新测试全部通过
- 60/60 总测试通过 (44旧 + 16新)
- 与 Phase 2 架构完全兼容

技术栈:
- C++17, fem::v2 命名空间
- ElementType 枚举扩展 (支持 Node/Edge2/Tri3等)
- 拓扑关系支持 (boundary_edges, boundary_faces)

设计文档:
- docs/MESH_REDESIGN_V2.md (完整设计)
- 支持 1D/2D/3D 混合网格
- 为高阶单元预留扩展

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,10 @@ add_library(fem STATIC
     # Physics
     physics/heat_conduction.cpp
     physics/elasticity.cpp
+    # Mesh V2 (新架构)
+    mesh_v2/material.cpp
+    mesh_v2/mesh.cpp
+    mesh_v2/model.cpp
 )
 
 target_include_directories(fem PUBLIC
