refactor: 切换到 Mesh V2 架构 - 移除旧代码
重大改动:
- 移除 fem::v2 命名空间，直接用 fem
- 删除旧架构代码 (mesh_generator, element_base, assembler, boundary_condition)
- 删除旧示例 (examples/)
- mesh_v2/ → mesh/

保留部分:
- solver/ (CG, BiCGSTAB 求解器)
- assembly/sparse_matrix (供 solver 使用)
- core/ (logger, timer, types)

移除部分:
- element/ (Triangle2D, Quad2D) → 用新的 Element 层次替代
- mesh_generator → 后续重新实现
- examples/ (Phase 2 示例) → 后续基于新架构重写
- physics/ (heat, elasticity) → 后续重新实现
- io/VTKWriter → 后续适配新 Mesh

测试结果:
- 27/27 测试通过
- Core: 6个
- Solver: 5个
- Mesh V2: 16个 (Material, Element, Mesh, Model)

下一步:
1. 实现基于新 Mesh 的网格生成器
2. 实现新的 Assembler (支持多 Mesh)
3. 重新实现 physics 模块
4. 重写示例程序

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,30 +5,16 @@ add_library(fem STATIC
     # Core
     core/logger.cpp
     core/timer.cpp
-    # Mesh
+    # Mesh (新架构)
+    mesh/material.cpp
     mesh/mesh.cpp
-    mesh/mesh_generator.cpp
-    # Element
-    element/element_base.cpp
-    element/triangle2d.cpp
-    element/quad2d.cpp
-    # Assembly
+    mesh/model.cpp
+    # Assembly (保留 sparse_matrix 供 solver 使用)
     assembly/sparse_matrix.cpp
-    assembly/assembler.cpp
-    assembly/boundary_condition.cpp
     # Solver
     solver/solver.cpp
     solver/cg.cpp
     solver/bicgstab.cpp
-    # IO
-    io/io.cpp
-    # Physics
-    physics/heat_conduction.cpp
-    physics/elasticity.cpp
-    # Mesh V2 (新架构)
-    mesh_v2/material.cpp
-    mesh_v2/mesh.cpp
-    mesh_v2/model.cpp
 )
 
 target_include_directories(fem PUBLIC
