feat: implement mesh generator for new architecture
实现内容:
- MeshGenerator 类 (mesh_generator.h/cpp)
  - generate_unit_square_tri() - 2D 三角形网格
  - generate_unit_square_quad() - 2D 四边形网格
  - generate_unit_cube_tet() - 3D 四面体网格
  - generate_unit_cube_brick() - 3D 六面体网格
  - identify_boundaries_2d/3d() - 自动识别边界

特性:
- 基于新 Mesh 架构 (fem::Mesh)
- 生成结构化网格 [0,1]^dim
- 支持 Tri3, Quad4, Tet4, Brick8 单元
- 自动边界识别 (left/right/bottom/top/front/back)

测试:
- 11 个新测试全部通过
- 38/38 总测试通过 (27旧 + 11新)
- 覆盖: 节点坐标、单元数量、边界识别、单元类型

示例:
Model model("test");
int mat = model.add_material("Steel");
int mid = model.add_mesh("part", mat);
Mesh& mesh = model.mesh(mid);
MeshGenerator::generate_unit_square_tri(10, 10, mesh);
MeshGenerator::identify_boundaries_2d(mesh);

下一步: Phase 2.2 - Assembler 实现

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(fem STATIC
     mesh/material.cpp
     mesh/mesh.cpp
     mesh/model.cpp
+    mesh/mesh_generator.cpp
     # Assembly (保留 sparse_matrix 供 solver 使用)
     assembly/sparse_matrix.cpp
     # Solver
