feat: implement math library (Vector, DenseMatrix, SparseMatrix)
新增 math/ 模块:
- Vector 类: 动态向量，支持算术运算、点积、范数等
- DenseMatrix 类: 密集矩阵，行优先存储，支持矩阵运算和转置
- SparseMatrix 类: 支持 COO, CSR, CSC 三种稀疏格式
  - COOMatrix: 装配阶段使用
  - CSRMatrix: 求解阶段使用 (matve优化)
  - CSCMatrix: 列压缩格式
  - 格式转换: coo_to_csr, coo_to_csc等

特性:
- 完整的向量/矩阵运算
- 异常安全 (size mismatch, division by zero检测)
- COO自动合并重复元素
- CSR高效矩阵-向量乘法

兼容性:
- 移除 types.h 中的 Vector typedef (与新 Vector 类冲突)
- 旧 solver 代码添加局部 using Vector = std::vector<Real> 兼容

测试:
- 18 个数学库测试全部通过
  - VectorTest: 5个 (构造、算术、点积、范数、归一化)
  - DenseMatrixTest: 7个 (构造、单位矩阵、算术、乘法、转置、对称性)
  - SparseMatrixTest: 6个 (COO/CSR/CSC、matvec、重复合并)
- 56/56 总测试通过 (38旧 + 18新)

下一步: 使用新数学库重构 Assembler

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,16 @@ add_library(fem STATIC
     # Core
     core/logger.cpp
     core/timer.cpp
+    # Math
+    math/vector.cpp
+    math/dense_matrix.cpp
+    math/sparse_matrix.cpp
     # Mesh (新架构)
     mesh/material.cpp
     mesh/mesh.cpp
     mesh/model.cpp
     mesh/mesh_generator.cpp
-    # Assembly (保留 sparse_matrix 供 solver 使用)
+    # Assembly (保留供旧 solver 使用)
     assembly/sparse_matrix.cpp
     # Solver
     solver/solver.cpp
