feat: implement new Assembler with multi-DOF support
新增 Assembler 类:
- 通用矩阵/向量装配接口
- 多自由度场支持 (标量/矢量)
- Dirichlet 边界条件应用
- 支持 Model + Mesh 架构

功能:
- assemble(elem_func): 装配矩阵和向量
- assemble_matrix(elem_func): 仅矩阵装配
- assemble_vector(elem_func): 仅向量装配
- apply_dirichlet(bcs): 应用 Dirichlet BC
- matrix(): 返回 CSR 格式矩阵
- rhs(): 返回载荷向量

接口设计:
- ElementMatrixFunc: 用户提供的单元计算函数
- DirichletBC: 边界条件数据结构
- dofs_per_node: 支持标量场(1)和矢量场(2/3)

新增工具函数:
- csr_to_coo(): CSR → COO 转换

测试:
- 6 个 Assembler 测试全部通过
  * Construction: 标量/矢量场初始化
  * AssembleScalar: 标量场装配
  * AssembleVector: 矢量场装配
  * ApplyDirichlet: 标量场边界条件
  * ApplyDirichletVector: 矢量场边界条件
  * Clear: 清空和重装配
- 62/62 总测试通过

示例:
- poisson_2d_v2.cpp: 使用新 Assembler 的 Poisson 求解
- 结果验证: 与旧版一致 (u_max≈0.0735 @ center)

下一步: Physics 模块重构 (heat, elasticity)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,8 @@
 # ── 示例程序 ──
 add_executable(poisson_2d_demo poisson_2d_demo.cpp)
-
 target_link_libraries(poisson_2d_demo PRIVATE fem)
 target_include_directories(poisson_2d_demo PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
-# 如果需要更多示例，可以在这里添加
-# add_executable(example2 example2.cpp)
-# target_link_libraries(example2 PRIVATE fem)
+add_executable(poisson_2d_v2 poisson_2d_v2.cpp)
+target_link_libraries(poisson_2d_v2 PRIVATE fem)
+target_include_directories(poisson_2d_v2 PRIVATE ${CMAKE_SOURCE_DIR}/src)
