feat: implement physics modules (heat + elasticity WIP)
新增 physics/ 模块 (面向对象设计):

**HeatConduction** (physics/heat.h/cpp) ✅
- 2D 热传导物理: -∇·(k∇u) = Q
- compute_element(): 计算单元刚度矩阵和载荷向量
- compute_tri3_gradients(): 三角形形函数梯度
- 支持导热系数 k 和热源 Q

**Elasticity2D** (physics/elasticity_v2.h/cpp) 🚧
- 2D 平面应力/平面应变
- compute_element(): 单元刚度矩阵 Ke = B^T D B * area
- compute_D_matrix(): 本构矩阵 (平面应力/应变)
- compute_tri3_B_matrix(): 应变-位移矩阵
- **状态:** 矩阵装配完成，求解器收敛问题待调试

示例程序:
- heat_2d.cpp: 热传导示例 ✅
  * 30x30网格 (961节点, 1800单元)
  * 53次迭代收敛, 残差 6.32e-09
  * 最大温度 u≈0.736 @ 中心点 (符合理论)

- elasticity_2d.cpp: 弹性力学示例 🚧
  * 20x20网格 (441节点, 800单元, 882 DOFs)
  * 矩阵装配成功 (28800非零元)
  * **问题:** CG求解器未收敛 (残差NaN)
  * **待修复:** 可能是边界条件或矩阵装配bug

架构优势:
- 与新 Assembler 完美集成
- lambda 捕获物理模块实例
- 清晰的接口和责任分离

下一步:
- [ ] 调试 Elasticity2D 求解器收敛问题
- [ ] 添加弹性力学单元测试
- [ ] VTK 输出模块

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,11 @@ target_include_directories(poisson_2d_demo PRIVATE ${CMAKE_SOURCE_DIR}/src)
 add_executable(poisson_2d_v2 poisson_2d_v2.cpp)
 target_link_libraries(poisson_2d_v2 PRIVATE fem)
 target_include_directories(poisson_2d_v2 PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(heat_2d heat_2d.cpp)
+target_link_libraries(heat_2d PRIVATE fem)
+target_include_directories(heat_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(elasticity_2d elasticity_2d.cpp)
+target_link_libraries(elasticity_2d PRIVATE fem)
+target_include_directories(elasticity_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
