wip: debug Elasticity2D solver convergence issue
添加 physics 模块单元测试:
- test_physics.cpp: HeatConduction 和 Elasticity2D 单元测试
  * HeatConductionTest: 构造、简单单元测试 ✅
  * Elasticity2DTest: 构造、对称性、正定性测试 ✅
  * 3/3 测试通过

添加调试示例:
- elasticity_simple.cpp: 最小 2x2 网格全约束测试
- elasticity_2d.cpp: 更新边界条件（添加底部约束）

优化 Assembler::apply_dirichlet():
- 统一收集所有 BC DOF，避免冲突
- 简化为主对角线法

**当前状态:**
✅ HeatConduction 完全正常 (heat_2d 示例通过)
✅ Elasticity2D 单元测试通过 (单元矩阵正确)
🚧 Elasticity2D 求解器未收敛 (残差 NaN)

**已排除的原因:**
- ❌ 单元矩阵错误 (测试证明正确)
- ❌ 边界条件冲突 (已统一处理)
- ❌ 刚体运动未约束 (全约束仍失败)

**待调查:**
- Assembler 装配过程 (矢量场特有问题?)
- apply_dirichlet 对矢量场的处理
- CSR 格式转换中的问题

下一步: 添加矩阵调试输出，定位 NaN 来源

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,3 +10,7 @@ target_include_directories(heat_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
 add_executable(elasticity_2d elasticity_2d.cpp)
 target_link_libraries(elasticity_2d PRIVATE fem)
 target_include_directories(elasticity_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(elasticity_simple elasticity_simple.cpp)
+target_link_libraries(elasticity_simple PRIVATE fem)
+target_include_directories(elasticity_simple PRIVATE ${CMAKE_SOURCE_DIR}/src)
