--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(fem_tests
     test_math.cpp
     test_solver.cpp
     test_assembler.cpp
+    test_physics.cpp
     test_mesh_v2.cpp
     test_mesh_generator.cpp
 )
