fix: correct Dirichlet BC implementation (column elimination)
**问题根源:**
apply_dirichlet 只修改了约束DOF的行 (K(i,i)=1, K(i,j≠i)=0)，
但未修改约束DOF的列 (K(j≠i,i) 仍保留原值)。

这导致：
- 自由DOF j 的行中仍包含约束DOF i 的贡献
- 系统不一致，求解器发散 (残差 NaN 或极大值)

**修复方案:**
完全消去法 (Complete Elimination):
1. 对每个约束DOF i (u_i = bc_value):
   - 修正右端项: F(j) -= K(j,i) * bc_value (对所有自由DOF j)
   - 修改第i行: K(i,i)=1, K(i,j≠i)=0
   - **修改第i列: K(j≠i,i)=0**
   - 设置: F(i) = bc_value

**验证结果:**
✅ heat_2d: 仍然正常 (53次迭代)
✅ elasticity_full_debug: 10次迭代收敛 (2x2网格)
✅ elasticity_2d: 219次迭代收敛 (20x20网格)
✅ 67/67 单元测试通过

**技术细节:**
修改前 (错误):

修改后 (正确):

**调试工具:**
新增 elasticity_full_debug.cpp:
- 详细输出装配前后的矩阵信息
- 检查约束DOF和自由DOF的行
- 验证边界条件的正确施加

问题已完全解决！

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,3 +18,7 @@ target_include_directories(elasticity_simple PRIVATE ${CMAKE_SOURCE_DIR}/src)
 add_executable(elasticity_debug elasticity_debug.cpp)
 target_link_libraries(elasticity_debug PRIVATE fem)
 target_include_directories(elasticity_debug PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(elasticity_full_debug elasticity_full_debug.cpp)
+target_link_libraries(elasticity_full_debug PRIVATE fem)
+target_include_directories(elasticity_full_debug PRIVATE ${CMAKE_SOURCE_DIR}/src)
