--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,7 @@
-# ── GoogleTest ──
-include(FetchContent)
-FetchContent_Declare(
-    googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG        v1.14.0
-)
-FetchContent_MakeAvailable(googletest)
+# ── GoogleTest (submodule) ──
+add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/googletest 
+                 ${CMAKE_BINARY_DIR}/third_party/googletest
+                 EXCLUDE_FROM_ALL)
 
 # ── 测试目标 (按模块逐步添加) ──
 add_executable(fem_tests
