feat: implement VTK output module
新增 io/vtk_writer 模块:
- VTKWriter 类: 导出结果到 VTK 格式 (ParaView 可视化)
- 支持输出网格结构 (UNSTRUCTURED_GRID)
- 支持节点标量场 (temperature, pressure 等)
- 支持节点矢量场 (displacement, velocity 等)
- 自动映射单元类型到 VTK 格式:
  * Tri3 → VTK_TRIANGLE (5)
  * Quad4 → VTK_QUAD (9)
  * Tet4 → VTK_TETRA (10)
  * Brick8 → VTK_HEXAHEDRON (12)

**功能:**
- write_mesh(): 输出网格结构
- add_point_scalar(): 添加标量场数据
- add_point_vector(): 添加矢量场数据 (支持 2D/3D)
- 自动补充 z=0 (2D 矢量场)

**示例更新:**
- heat_2d.cpp: 添加温度场 VTK 输出
- elasticity_2d.cpp: 添加位移场 VTK 输出

**生成文件:**
- heat_2d_result.vtk (51KB, 961节点, 1800单元, 标量场)
- elasticity_2d_result.vtk (28KB, 441节点, 800单元, 矢量场)

**验证:**
✅ VTK 格式正确 (# vtk DataFile Version 3.0)
✅ 数据正确 (max temperature = 0.736, max displacement = 0.0104)
✅ 67/67 测试通过
✅ 无回归

**使用方法:**
```cpp
VTKWriter vtk("output.vtk");
vtk.write_mesh(mesh);
vtk.add_point_scalar("temperature", u);
vtk.add_point_vector("displacement", u, 2);  // 2D
vtk.close();
```

**可视化:**
可以用 ParaView 打开 .vtk 文件查看结果:
```bash
paraview heat_2d_result.vtk
```

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ add_library(fem STATIC
     # Physics
     physics/heat.cpp
     physics/elasticity_v2.cpp
+    # IO
+    io/vtk_writer.cpp
     # Solver
     solver/solver.cpp
     solver/cg.cpp
