--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(fem_tests
     test_physics.cpp
     test_mesh_v2.cpp
     test_mesh_generator.cpp
+    test_io.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
