feat: complete Phase 2.5 - thermal-structural coupling example
- Implement thermal-structural coupling example (thermal_stress_2d.cpp)
- Sequential coupling: heat conduction → temperature field → thermal strain → structural response
- Demonstrate multi-physics capability with proper physics integration
- Add comprehensive documentation and results analysis
- Apply code review improvements:
  * Remove const_cast for const correctness
  * Extract D matrix calculation outside loop (performance)
  * Add constexpr constants for magic numbers
  * Improve code comments and documentation
- Test results: converged with max displacement 4.09e-03
- VTK output includes both temperature and displacement fields
- Phase 2 完成! 8 examples, 86/86 tests passing

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,3 +26,7 @@ target_include_directories(elasticity_full_debug PRIVATE ${CMAKE_SOURCE_DIR}/src
 add_executable(cantilever_beam cantilever_beam.cpp)
 target_link_libraries(cantilever_beam PRIVATE fem)
 target_include_directories(cantilever_beam PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(thermal_stress_2d thermal_stress_2d.cpp)
+target_link_libraries(thermal_stress_2d PRIVATE fem)
+target_include_directories(thermal_stress_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
