--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(fem_tests
     test_mesh_v2.cpp
     test_mesh_generator.cpp
     test_io.cpp
+    test_newton_raphson.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
