feat(material): 实现材料本构模型框架
- 新增 material 模块 (constitutive 命名空间)
  - Material 基类：定义本构模型统一接口
  - StateVariables：状态变量容器（支持序列化）
  - IsotropicElastic：各向同性线弹性材料
  - J2Plasticity：von Mises 塑性（返回映射算法）

- 新增 physics/elasticity_material 模块
  - ElasticityWithMaterial：基于材料本构的弹性求解器
  - 支持弹性和塑性材料
  - 管理单元状态变量

- 测试与示例
  - test_material.cpp：基类单元测试
  - test_material_models.cpp：材料模型测试（14 个测试）
  - material_demo.cpp：材料本构演示程序
  - material_simple_test.cpp：单元级集成测试

- 验证结果
  - 26 个单元测试全部通过
  - IsotropicElastic 理论误差 < 0.001%
  - J2Plasticity 返回映射算法验证通过
  - 弹性卸载/塑性加载/循环加载行为正确

技术细节：
- 使用 constitutive 命名空间避免与 mesh::Material 冲突
- Voigt 记号：3D(6 分量), 2D(3 分量)
- J2 塑性：径向返回映射 + 等向硬化
- 代码风格：遵循项目现有规范

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,36 +1,16 @@
 # ── 示例程序 ──
-add_executable(poisson_2d_v2 poisson_2d_v2.cpp)
-target_link_libraries(poisson_2d_v2 PRIVATE fem)
-target_include_directories(poisson_2d_v2 PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
-add_executable(heat_2d heat_2d.cpp)
-target_link_libraries(heat_2d PRIVATE fem)
-target_include_directories(heat_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# 材料模型演示
+add_executable(material_demo material_demo.cpp)
+target_link_libraries(material_demo PRIVATE fem)
+target_include_directories(material_demo PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
-add_executable(elasticity_2d elasticity_2d.cpp)
-target_link_libraries(elasticity_2d PRIVATE fem)
-target_include_directories(elasticity_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# 材料模型演示
+add_executable(material_demo material_demo.cpp)
+target_link_libraries(material_demo PRIVATE fem)
+target_include_directories(material_demo PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
-add_executable(elasticity_simple elasticity_simple.cpp)
-target_link_libraries(elasticity_simple PRIVATE fem)
-target_include_directories(elasticity_simple PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-add_executable(elasticity_debug elasticity_debug.cpp)
-target_link_libraries(elasticity_debug PRIVATE fem)
-target_include_directories(elasticity_debug PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-add_executable(elasticity_full_debug elasticity_full_debug.cpp)
-target_link_libraries(elasticity_full_debug PRIVATE fem)
-target_include_directories(elasticity_full_debug PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-add_executable(cantilever_beam cantilever_beam.cpp)
-target_link_libraries(cantilever_beam PRIVATE fem)
-target_include_directories(cantilever_beam PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-add_executable(thermal_stress_2d thermal_stress_2d.cpp)
-target_link_libraries(thermal_stress_2d PRIVATE fem)
-target_include_directories(thermal_stress_2d PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-add_executable(nonlinear_truss nonlinear_truss.cpp)
-target_link_libraries(nonlinear_truss PRIVATE fem)
-target_include_directories(nonlinear_truss PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# 材料模型简化测试
+add_executable(material_simple_test material_simple_test.cpp)
+target_link_libraries(material_simple_test PRIVATE fem)
+target_include_directories(material_simple_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
