--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(fem_tests
     test_math.cpp
     test_material.cpp
     test_material_models.cpp
+    test_advanced_materials.cpp
     test_solver.cpp
     test_assembler.cpp
     test_physics.cpp
