feat(shape): 实现形函数类系统
新增 shape 模块：
- ShapeFunction 抽象基类（纯虚接口）
  * evaluate(): 计算形函数值
  * evaluateDerivatives(): 计算形函数导数
  * getGaussPoints(): 高斯积分点和权重
  * computeJacobian(): 雅可比矩阵
  * computePhysicalDerivatives(): 物理坐标系导数

- ShapeFunction2D/3D 基类
  * 高斯积分点生成（Gauss-Legendre, 三角形, 四面体）
  * 2D: gaussLegendre2D, gaussTriangle
  * 3D: gaussLegendre3D, gaussTetrahedron

- 具体单元实现（4种）
  * Tri3ShapeFunction: 三角形3节点（线性）
  * Quad4ShapeFunction: 四边形4节点（双线性）
  * Tet4ShapeFunction: 四面体4节点（线性）
  * Brick8ShapeFunction: 六面体8节点（三线性）

- ShapeFunctionFactory 工厂类
  * create(): 根据ElementType创建形函数对象
  * 便捷静态接口（evaluate, evaluateDerivatives, getGaussPoints）

特性：
- 面向对象设计：基类 + 多态子类
- 低耦合：与Element解耦，通过ElementType关联
- 统一接口：一阶/二阶单元使用相同API
- 高斯积分：支持1-3阶积分
- 雅可比计算：2D/3D解析求逆
- 缓存设计：高斯点预计算

测试：
- test_shape_function.cpp: 14个新测试
- 总计144个测试，100%通过
- 覆盖：节点值、单位分解、导数、高斯积分、雅可比

文档：
- docs/SHAPE_FUNCTION_DESIGN.md: 完整设计文档
- SHAPE_FUNCTION_DELIVERY.md: 交付文档
- 代码注释：Doxygen风格

应用场景：
- 刚度矩阵装配
- 载荷向量计算
- 后处理插值
- FEM通用框架

参考文献：
- Zienkiewicz & Taylor (2000)
- Hughes (2000)
- Bathe (1996)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,13 @@ add_library(fem STATIC
     material/orthotropic_elastic.cpp
     material/j2_plasticity.cpp
     material/j2_plasticity_kinematic.cpp
+    # Shape (形函数)
+    shape/shape_function.cpp
+    shape/shape_tri3.cpp
+    shape/shape_quad4.cpp
+    shape/shape_tet4.cpp
+    shape/shape_brick8.cpp
+    shape/shape_function_factory.cpp
     # Mesh (新架构)
     mesh/material.cpp
     mesh/mesh.cpp
