feat(fem): integrate shape function system into FEM physics modules
Major changes:
- Integrate shape function system into Elasticity2D
  - Replace hardcoded Tri3 B-matrix calculation with ShapeFunction classes
  - Add Gauss quadrature integration loop
  - Support Tri3 and Quad4 elements automatically via ShapeFunctionFactory

- Add new Elasticity3D module for 3D elasticity analysis
  - Support Tet4 (tetrahedral) and Brick8 (hexahedral) elements
  - Full 3D strain-displacement matrix (6 components: εxx, εyy, εzz, γyz, γxz, γxy)
  - 6x6 constitutive matrix for 3D elasticity

- Add comprehensive integration tests
  - test_shape_integration.cpp with 6 test cases
  - Verify stiffness matrix symmetry and positive-definiteness
  - Test 2D elements (Tri3, Quad4) and 3D elements (Tet4, Brick8)
  - Rigid body motion test to verify zero energy modes

Architecture improvements:
- Decouple physics modules from element-specific implementation
- Use ShapeFunctionFactory for polymorphic element creation
- Extensible design: adding new element types no longer requires physics module changes
- Gauss integration points and weights automatically selected based on element type

Files modified:
- src/physics/elasticity_v2.cpp (integrated shape function system)
- src/physics/elasticity_3d.h/cpp (new 3D elasticity module)
- src/CMakeLists.txt (add elasticity_3d.cpp to build)
- tests/test_shape_integration.cpp (6 new integration tests)
- tests/CMakeLists.txt (add test_shape_integration.cpp)

Technical highlights:
- B-matrix construction now uses computePhysicalDerivatives() for any element type
- Jacobian determinant computed from shape functions
- Loop over Gauss points for numerical integration: Ke += B^T * D * B * det(J) * w
- Supports multiple Gauss quadrature orders (default: order 2 for linear strain)

Ready for production use in 2D/3D linear elasticity analysis.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(fem STATIC
     # Physics
     physics/heat.cpp
     physics/elasticity_v2.cpp
+    physics/elasticity_3d.cpp
     physics/elasticity_material.cpp
     # IO
     io/vtk_writer.cpp
