--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(fem_tests
     test_material_models.cpp
     test_advanced_materials.cpp
     test_shape_function.cpp
+    test_shape_integration.cpp
     test_solver.cpp
     test_assembler.cpp
     test_physics.cpp
