refactor: 重构 physics 模块，删除旧代码，统一使用 unified 架构
主要更改:
- 删除旧的物理模块 (heat, elasticity_v2, elasticity_3d, elasticity_material)
- 新增统一架构模块 (heat_unified, elasticity_unified, physics_base)
- 更新 CMakeLists.txt，只编译 unified 版本
- 更新测试文件以使用新的 unified 接口
- 修复浮点精度问题，使用相对容差

特性:
✅ 基于形函数系统，无硬编码单元类型
✅ 支持所有 2D/3D 单元 (Tri3, Quad4, Tet4, Brick8)
✅ 高斯积分精确计算
✅ 所有 150 个测试通过

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,3 +14,12 @@ target_include_directories(material_simple_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
 # add_executable(cantilever_material cantilever_material.cpp)
 # target_link_libraries(cantilever_material PRIVATE fem)
 # target_include_directories(cantilever_material PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+# 统一物理模块测试
+add_executable(test_unified_heat test_unified_heat.cpp)
+target_link_libraries(test_unified_heat PRIVATE fem)
+target_include_directories(test_unified_heat PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+add_executable(test_unified_elasticity test_unified_elasticity.cpp)
+target_link_libraries(test_unified_elasticity PRIVATE fem)
+target_include_directories(test_unified_elasticity PRIVATE ${CMAKE_SOURCE_DIR}/src)
