feat: 添加场数据管理系统 (Data Management System)
新增模块:
- DataLocation: 数据存储位置枚举 (Node, Element, Face, Edge, GaussPoint)
- BaseData: 场数据抽象基类
- FieldData<T>: 类型化场数据模板类
  - RealData: 标量场
  - IntData: 整型场
  - BoolData: 布尔场 (特化处理 std::vector<bool>)
  - StringData: 字符串场
  - VectorData: 矢量场
  - TensorData: 张量场
- DataManager: 场数据管理器

特性:
✅ 类型安全的模板设计
✅ 支持多种数据位置 (Node/Element/GaussPoint等)
✅ 高效索引访问 O(1)
✅ 批量操作 (resize_all, clear_all, reset_all)
✅ 高斯点专用接口
✅ 统一管理多个场
✅ 完整文档和示例

使用场景:
- 存储节点温度、位移、速度等
- 存储单元材料ID、体积等
- 存储高斯点应力、应变、历史变量等
- 支持网格细化后的数据扩展

测试:
- 新增 19 个单元测试 (169/169 通过)
- 新增示例程序 test_data_manager.cpp
- 完整文档 src/data/README.md

代码统计:
- 新增文件: 11 个
- 新增代码: ~1000 行

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,8 @@ add_library(fem STATIC
     physics/physics_base.cpp
     physics/heat_unified.cpp
     physics/elasticity_unified.cpp
+    # Data (场数据管理)
+    data/base_data.cpp
     # IO
     io/vtk_writer.cpp
     # Solver
