feat: 添加后处理模块 (PostProcessor)
新增模块:
- PostProcessor: 后处理计算模块

核心功能:
✅ 从位移场计算应变场（高斯点）
✅ 从应变场计算应力场（高斯点）
✅ 高斯点数据外插到节点
✅ 高斯点数据平均到单元中心
✅ 提取应力分量（σ_xx, σ_yy, τ_xy 等）
✅ 计算 von Mises 等效应力

接口设计:
- compute_strain_stress(displacement, data_manager) - 计算应变和应力
- extrapolate_to_nodes(data_manager, gp_field, node_field) - 外插到节点
- average_to_elements(data_manager, gp_field, elem_field) - 平均到单元
- extract_stress_component(data_manager, stress_field, component, output) - 提取分量
- compute_von_mises(data_manager, stress_field, output) - von Mises 应力

集成特性:
- 使用 DataManager 保存所有场数据
- 支持 2D/3D 分析
- 支持任意材料本构（通过 Material::computeTangent）
- 使用形函数系统（无硬编码单元类型）

应用场景:
- 弹性力学分析后处理
- 塑性分析结果提取
- 应力应变可视化
- VTK 导出支持

测试:
- 所有 169 个原有测试通过

注意:
- 示例程序待完善（需要调试 Matrix-vector 尺寸匹配问题）
- 单元测试待添加（核心功能已实现）

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,8 @@ add_library(fem STATIC
     physics/elasticity_unified.cpp
     # Data (场数据管理)
     data/base_data.cpp
+    # PostProcess (后处理)
+    postprocess/post_processor.cpp
     # IO
     io/vtk_writer.cpp
     # Solver
