feat: 添加增量式后处理器（WIP - 待修复Voigt记号问题）
新增功能:
✅ IncrementalPostProcessor - 增量式后处理器
✅ 高斯点状态管理（应力、应变、状态变量）
✅ 增量应力更新框架
✅ von Mises 应力计算
✅ 塑性应变提取

核心特性:
1. 增量更新：
   - 保存上一步位移
   - 计算位移增量
   - 增量更新应力（调用 material->computeStress）

2. 状态变量管理：
   - 每个高斯点保存完整状态
   - 支持塑性应变、硬化参数等
   - 自动初始化和重置

3. 真实本构积分：
   - 在每个高斯点调用 material->computeStress
   - 传递应变增量和状态变量
   - 材料模型负责应力更新

4. 数据提取：
   - extract_stress_to_manager()
   - extract_strain_to_manager()
   - extract_plastic_strain()
   - compute_von_mises()

测试状态:
⚠️ 编译成功但精度有问题（误差 1500%）

已知问题（待修复）:
1. 🔴 Voigt 记号问题：
   - 工程剪应变 γ_xy vs 张量剪应变 ε_xy = γ_xy/2
   - B 矩阵需要修正（剪切项可能需要除以2）

2. 🔴 应力符号问题：
   - 应力为负数（预期为正）
   - 可能是B矩阵符号错误

3. 🟡 DataManager 重复添加：
   - 每步重新创建字段导致警告
   - 需要先检查是否存在

修复计划:
1. 统一 Voigt 记号约定
2. 验证 B 矩阵正确性
3. 添加调试输出（B矩阵、应变增量、应力）
4. 与简化方法对比

技术栈:
- 增量本构积分 ✓
- 状态变量管理 ✓
- 高斯点级别精度 ✓
- 框架完整 ✓
- 精度验证 ⚠️

下一步:
- 修复 Voigt 记号
- 验证精度达到 < 1%
- 添加完整文档

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -60,6 +60,11 @@ add_executable(test_biaxial_tension test_biaxial_tension.cpp)
 target_link_libraries(test_biaxial_tension PRIVATE fem)
 target_include_directories(test_biaxial_tension PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
+# 增量后处理测试
+add_executable(test_incremental_postprocess test_incremental_postprocess.cpp)
+target_link_libraries(test_incremental_postprocess PRIVATE fem)
+target_include_directories(test_incremental_postprocess PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
 # 验证测试（单元级别）
 add_executable(test_plasticity_verification test_plasticity_verification.cpp)
 target_link_libraries(test_plasticity_verification PRIVATE fem)
