feat: 实现 ILU(0) 预条件器
- 新增 ILUPreconditioner 类（src/solver/pcg.h, pcg.cpp）
- ILU(0) 不完全 LU 分解（保持原稀疏模式）
- 前向/后向替换求解
- 集成到 PCGSolver（支持 "ilu" 预条件器类型）
- 性能：100x100 网格，迭代次数减少 62%（208 → 79）
- 加速比：2.63x（相对于 CG），2.37x（相对于 Jacobi）

测试：
- test_ilu.cpp（5个测试用例，全部通过）
- benchmark_preconditioners.cpp（性能对比示例）
- 全部测试：174/174 通过 ✅

性能对比（100x100 Poisson问题）：
  CG:        208 迭代
  Jacobi:    187 迭代（1.11x）
  SSOR:       93 迭代（2.24x）
  ILU(0):     79 迭代（2.63x）🚀

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(fem_tests
     test_io.cpp
     test_newton_raphson.cpp
     test_data.cpp
+    test_ilu.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
