feat: 集成 AMGCL 库实现 AMG 预条件器
- 添加 AMGCL 作为 git submodule (third_party/amgcl)
- 实现 AMGPreconditioner 类 (使用 PIMPL 模式)
- 使用 AMGCL_NO_BOOST 避免 Boost 依赖
- 使用 smoothed aggregation 粗化策略
- 性能：100x100 网格，迭代次数 12（CG: 208，ILU: 79）
- 加速比：17.33x（迭代），2.05x（时间）

测试：
- test_amg.cpp（4个测试用例，全部通过）
- 178/178 总测试通过 ✅
- benchmark_preconditioners 更新（包含 AMG）

性能对比（100x100 Poisson问题）：
  CG:        208 迭代，114.28ms
  Jacobi:    187 迭代，154.67ms
  SSOR:       93 迭代，134.76ms
  ILU(0):     79 迭代，127.55ms
  AMG:        12 迭代， 55.77ms 🚀

AMG 是大规模稀疏线性系统的最优预条件器！
适用场景：百万级自由度 FEM 问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+# ── AMGCL (header-only library) ──
+set(AMGCL_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/third_party/amgcl)
+include_directories(${AMGCL_INCLUDE_DIR})
+
 # ── 子目录 ──
 add_subdirectory(src)
 add_subdirectory(tests)
