--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(fem_tests
     test_newton_raphson.cpp
     test_data.cpp
     test_ilu.cpp
+    test_amg.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
