refactor: 将 linear solver 移动到 math 文件夹
代码重构：将求解器相关类从 solver/ 移动到 math/

移动的文件：
- solver.h/cpp → math/solver.h/cpp
- cg.h/cpp → math/cg.h/cpp
- pcg.h/cpp → math/pcg.h/cpp (包含 Jacobi/SSOR/ILU/AMG 预条件器)
- bicgstab.h/cpp → math/bicgstab.h/cpp
- newton_raphson.h/cpp → math/newton_raphson.h/cpp

更新的文件：
- src/CMakeLists.txt: 更新文件路径
- 所有 #include "solver/" → #include "math/"
- tests/ 和 examples/ 中的所有引用

理由：
- 线性/非线性求解器从数学角度属于数学库
- 与其他数学组件（Vector, Matrix）放在同一位置更合理
- 简化项目结构，减少目录层级

验证：
- benchmark_preconditioners 编译并运行正常 ✅
- 所有求解器功能正常（CG/PCG/ILU/AMG/Newton-Raphson）

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,12 +41,12 @@ add_library(fem STATIC
     postprocess/post_processor_incremental.cpp
     # IO
     io/vtk_writer.cpp
-    # Solver
-    solver/solver.cpp
-    solver/cg.cpp
-    solver/pcg.cpp
-    solver/bicgstab.cpp
-    solver/newton_raphson.cpp
+    # Math - Linear Solvers
+    math/solver.cpp
+    math/cg.cpp
+    math/pcg.cpp
+    math/bicgstab.cpp
+    math/newton_raphson.cpp
 )
 
 target_include_directories(fem PUBLIC
